--- a/example/start-csr/index.html
+++ b/example/start-csr/index.html
@@ -11,5 +11,5 @@
     <!-- include support for `wasm-bindgen --weak-refs` - see: https://rustwasm.github.io/docs/wasm-bindgen/reference/weak-references.html -->
     <link data-trunk rel="rust" data-wasm-opt="z" data-weak-refs />
   </head>
-  <body></body>
+  <body class="min-h-screen bg-background font-sans"></body>
 </html>
